# azerothcore-wotlk

./: .gitignore  CMakeLists.txt  Directory.Build.props
.github/: copilot-instructions.md
modules/: CMakeLists.txt
src/cmake/macros/: FindMySQL.cmake
src/cmake/platform/: cmake_uninstall.in.cmake
src/common/Utilities/: EventMap.h
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/Player/: Player.cpp  Player.h  PlayerStorage.cpp  PlayerUpdates.cpp
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Guilds/: Guild.cpp  Guild.h
src/server/game/Maps/: Map.cpp
src/server/game/Movement/: MotionMaster.cpp  MotionMaster.h
src/server/game/Movement/MovementGenerators/: PointMovementGenerator.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/scripts/Commands/: cs_misc.cpp
src/server/scripts/Northrend/Naxxramas/: boss_anubrekhan.cpp  boss_faerlina.cpp  boss_four_horsemen.cpp  boss_gluth.cpp  boss_gluth.h  boss_gothik.cpp  boss_gothik.h  boss_grobbulus.cpp  boss_grobbulus.h  boss_heigan.cpp  boss_kelthuzad.cpp  boss_kelthuzad.h  boss_loatheb.cpp  boss_maexxna.cpp  boss_noth.cpp  boss_patchwerk.cpp  boss_razuvious.cpp  boss_sapphiron.cpp  boss_sapphiron.h  boss_thaddius.cpp
src/tools/vmap4_extractor/: vmapexport.cpp
